# thanks-contributors

./: .editorconfig  .env.example  .eslintrc.js  .gitignore  .npmignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  README.md  bin.js  cli.js  config.js  excludes.json  index.d.ts  index.js  package.json  tsconfig.json  vitest.config.ts  vitest.utils.ts
.cargo/: config.toml
.github/actions/yarn-install/: action.yml
.github/workflows/: CI.yml  build_and_release.yml  lint.yml  test.yml
__tests__/: cli.ts
__tests__/__snapshots__/: cli.ts.snap
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: api.rs  error.rs  lib.rs  utils.rs
