[package]
edition = "2021"
name = "thanks-contributors"
description = "This little script accesses GitHub's API to get all contributors and their PRs between two distinct points in the history of commits. This is helpful for changelogs where you'd want to list all contributions for that release (so e.g. changes between v1 and v1.1)."
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive", "wrap_help"] }
clap-verbosity-flag = "2.0.0"
dotenv = "0.15"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4"
napi = { version = "2", features = ["napi8", "serde_json", "async"] }
napi-derive = "2"
regex = "1"
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
